@@ -1,2 +1,3 @@
 DIST arrayfire-3.1.1.tar.bz2 23466597 SHA256 d353ec37ada7e20cf231f2d997d743553e503956b1ca679cd56097bddbac9f64 SHA512 cd8d25983285fc21673d979fcf26f8521b418fb8b51b07046100eccf648131fa411f81490193e47dde99a823212acf9a824d1fcf5e157edef0bee7290187ce5c WHIRLPOOL bf62f720d191e327639d28d7c5d534201df52bbf81ace3513a3ee0836013a7b0e6b7905d6880bd231e30b7d55795e7aa61475769f4ffb2e6a1962eef0f57ed53
+DIST arrayfire-3.1.2.tar.bz2 23435268 SHA256 64d12cbde8f1dbd86a7d6ef273b0f0cf4bd60d7ea1274f3b98c509764048d81f SHA512 4238fa4d236c5ea25929684f9c94f1a8248f797f41ebb907942f91c17dabc1c2322c208e53d88459bb1ea3e234943531ad6c7642dbff3cc445a237508cd94ceb WHIRLPOOL 16038ce86a16b16ce9fb01e3b0ba63b317b77bf640d2401ab2818c6dab514b5d15f3cf8863b926972693cab9d9c6c03387596bc0f84c95e2512ed6f68dd21244
 DIST gtest-1.7.0.zip 1164254 SHA256 247ca18dd83f53deb1328be17e4b1be31514cedfc1e3424f672bf11fd7e0d60d SHA512 8859369f2dd32cbc2ac01aba029aa3ff20a321f40658b9643aff442d34c33468221866b801b28c66a28af47dbcd362d26941fc98db92b6efb7e41ea5b7be1a07 WHIRLPOOL 0c31a385159551859c1afe76480b3fb1b560d666db9a0afc5cbda92bcd53bf129f85a8f902c6ded0779c2b4c49aacec59ba5a4d5ce316a07bf08174f4fc64049
