@@ -1,6 +1,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*arrayfire-3.1.2 (27 Sep 2015)
+
+  27 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +arrayfire-3.1.2.ebuild:
+  sci-libs/arrayfire: Version bump
+
 *arrayfire-3.1.1-r2 (20 Sep 2015)
 
   20 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
